--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        {% block content %}
 
+        {% endblock %}
     </body>
 </html>
